# rules_nu

./: .bazelignore  .bazelrc  .gitattributes  .gitignore  BUILD  LICENSE  MODULE.bazel  README.md  TOOLCHAINS.md
.bcr/: metadata.template.json  source.template.json
.github/workflows/: ci.yml  publish.yaml  release.yml  release_prep.sh
examples/basic/: BUILD  hello.nu  sum.nu
examples/binary/: BUILD  hello.nu
examples/modules/: BUILD  hello.nu
nu/: extensions.bzl  rules.bzl
nu/private/: BUILD  env.nu  extensions.bzl  nu_binary.bzl  nu_genrule.bzl  nu_library.bzl  providers.bzl
nu/private/extensions/: defs.bzl  hub_repo.bzl  templates.bzl  url.bzl  version.bzl
nu/tests/: .bazelrc  BUILD  MODULE.bazel  utils.bzl
nu/tests/modules/: math.nu
nu/tests/nu_binary/: BUILD  nu_binary_test.bzl
nu/tests/nu_binary/srcs/: check_toolchain.nu  modules.nu
nu/tests/nu_genrule/: BUILD  nu_genrule_test.bzl
nu/tests/nu_genrule/fixtures/: input2.txt
nu/tests/nu_genrule/modules/: math.nu
nu/tests/nu_library/: BUILD  nu_library_test.bzl
nu/tests/nu_library/srcs/: a.nu  b.nu  c.nu  d.nu
nu/tests/tools/: rc
nu/toolchain/: BUILD.bazel
nu/toolchains/: BUILD  defs.bzl  repo.bzl
tools/: BUILD  release.nu
tools/rc/: bes.bazelrc  ci.bazelrc  re.bazelrc
