module(
    name = "rules_nu",
    version = "0.1.0",
    repo_name = "rules_nu",
)

bazel_dep(name = "hermetic_launcher", version = "0.0.8")
bazel_dep(name = "rules_testing", version = "0.7.0", dev_dependency = True)

nu = use_extension("//nu:extensions.bzl", "nu")
nu.url(
    name = "nu_macos",
    url = "https://github.com/nushell/nushell/releases/download/0.114.0/nu-0.114.0-aarch64-apple-darwin.tar.gz",
    sha256 = "c98f7deedd41023fe6dc4567abb368c9442bda62989b91e179e095cbb457ce58",
    # strip_prefix = "nu-0.114.0-aarch64-apple-darwin",
    nu_path = "nu-0.114.0-aarch64-apple-darwin/nu",
)
use_repo(nu, "nu_macos")
register_toolchains("@nu_macos//:all")
