module(
    name = "rules_nu",
    version = "0.1.0",
    repo_name = "rules_nu",
)

bazel_dep(name = "hermetic_launcher", version = "0.0.8")
bazel_dep(name = "platforms", version = "1.1.0")

# Dependencies for development/testing only
bazel_dep(name = "rules_testing", version = "0.7.0", dev_dependency = True)
bazel_dep(name = "bazelrc-preset.bzl", version = "1.9.2", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.9.0", dev_dependency = True)
bazel_dep(name = "toolchains_buildbuddy", version = "0.0.4")

buildbuddy = use_extension("@toolchains_buildbuddy//:extensions.bzl", "buildbuddy")

register_toolchains(
    "@toolchains_buildbuddy//toolchains/cc:ubuntu_gcc_x86_64",
)

nu = use_extension("//nu:extensions.bzl", "nu", dev_dependency = True)

# Use version-based tag for automatic platform detection.
# The version, platform, and SHA256 hashes are resolved automatically.
# Available versions are defined in NUSHELL_RELEASES in extensions.bzl.
nu.toolchain(version = "0.114.0")
nu.toolchain(version = "0.114.0", os = "linux", arch = "x86_64")

use_repo(nu, "nu_toolchains")
register_toolchains("@nu_toolchains//:all")
